# QuantPricer

./: CMakeLists.txt  LICENSE.txt  Makefile  README.md  build.sh  main.cpp  requirements.txt
build_linux/: CMakeCache.txt  Makefile  cmake_install.cmake
data/: results.csv  sample_paths.csv
include/complexity/: barrier_option.hpp  binary_option.hpp
include/options/: Option.hpp  american_option.hpp  asian_option.hpp  european_option.hpp
include/pricing/: AmericanLSM.hpp  BlackScholes.hpp  EuropeanMC.hpp  MonteCarloPricer.hpp
include/setup/: cli_args.hpp  csv_exporter.hpp  dividends.hpp  option_factory.hpp  output.hpp  pricing_section.hpp
include/simulation/: GBM_Simulator.hpp
python/: app.py
python/backtest/: backtest.py
python/backtest/result/: backtest_results.csv  backtest_stats.csv
python/plot/: plot_paths.py  plot_results.py
python/static/: style.css
python/templates/: index.html
src/options/: Option.cpp  american_option.cpp  european_option.cpp
src/pricing/: AmericanLSM.cpp  BlackScholes.cpp  EuropeanMC.cpp  MonteCarloPricer.cpp
src/setup/: cli_args.cpp  csv_exporter.cpp  dividends.cpp  option_factory.cpp  output.cpp  pricing_section.cpp
src/simulation/: gbm_simulator.cpp
